Fix review Comments